--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "node-red-contrib-here-maps1",
   "version": "0.1.0",
   "description": "Node-RED nodes for HERE maps, navigation and geolocation APIs",
-  "main": "here-routing.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,7 +24,8 @@
   "homepage": "https://github.com/johnwalicki/node-red-contrib-here-maps#readme",
   "node-red": {
     "nodes": {
-      "here-routing": "here-routing.js"
+      "here-routing": "here-routing.js",
+      "here-geocode": "here-geocode.js"
     }
   },
   "dependencies": {
