--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-red-contrib-here-maps1",
   "version": "0.1.0",
   "description": "Node-RED nodes for HERE maps, navigation and geolocation APIs",
+  "main": "here-routing.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
